Manual changes, example file updates

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -16,22 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "860c3b35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- User inputs ---\n",
-    "rawsignal_dir = \"PATH/TO/YOUR/RAWSIGNALS/DATA\"  # Directory containing raw signal files"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "6950e206",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- User inputs ---\n",
+    "rawsignal_dir = \"PATH/TO/YOUR/RAWSIGNALS/DATA\"  # Directory containing raw signal files\n",
+    "\n",
     "#===== EXAMPLE USAGE CASES OF EXPORTER =====#\n",
     "\n",
     "exporter = SignalDataExporter()\n",
