moved manual location

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -31,8 +31,8 @@
     "# # Load all files in the rawsignals folder into a pandas dataframe\n",
     "# df = exporter.read_rawsignals_folder(rawsignal_dir)\n",
     "\n",
-    "# # Load specific indices 5 through 50\n",
-    "# df = exporter.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50\")\n",
+    "# Load specific indices 5 through 50\n",
+    "df = exporter.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50\")\n",
     "\n",
     "# # Load specific indices 5 through 50 with a step of 2. \n",
     "# df = exporter.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50:2\")\n",
