Changing example, changing to reader.py instead of exporter.py

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "9df0483e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hermes.analysis.exporter import SignalDataExporter\n",
+    "from hermes.analysis.reader import SignalDataReader\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "6950e206",
    "metadata": {},
    "outputs": [],
@@ -24,21 +24,21 @@
     "# --- User inputs ---\n",
     "rawsignal_dir = \"PATH/TO/YOUR/RAWSIGNALS/DATA\"  # Directory containing raw signal files\n",
     "\n",
-    "#===== EXAMPLE USAGE CASES OF EXPORTER =====#\n",
+    "#===== EXAMPLE USAGE CASES OF READER TO LOAD .RAWSIGNAL DATA =====#\n",
     "\n",
-    "exporter = SignalDataExporter()\n",
+    "reader = SignalDataReader()\n",
     "\n",
     "# # Load all files in the rawsignals folder into a pandas dataframe\n",
-    "# df = exporter.read_rawsignals_folder(rawsignal_dir)\n",
+    "# df = reader.read_rawsignals_folder(rawsignal_dir)\n",
     "\n",
     "# Load specific indices 5 through 50\n",
-    "df = exporter.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50\")\n",
+    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50\")\n",
     "\n",
     "# # Load specific indices 5 through 50 with a step of 2. \n",
-    "# df = exporter.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50:2\")\n",
+    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50:2\")\n",
     "\n",
     "# # Load a single file directly (instead of using folder):\n",
-    "# df = exporter.read_rawsignals_file(\"/path/to/data/file1.rawSignals\")\n"
+    "# df = reader.read_rawsignals_file(\"/path/to/data/file1.rawSignals\")\n"
    ]
   },
   {
