cleaned up example file

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -49,15 +49,7 @@
    "outputs": [],
    "source": [
     "# Display basic information about the loaded data\n",
-    "print(f\"Successfully loaded {len(df):,} signal records\")\n",
-    "print(f\"Columns: {list(df.columns)}\")\n",
-    "print(f\"\\nSignal type distribution:\")\n",
-    "print(df['signalTypeDescription'].value_counts())\n",
-    "print(f\"\\nData time range: {df['ToaFinal'].min():.6f} to {df['ToaFinal'].max():.6f} seconds\")\n",
-    "print(f\"Duration: {df['ToaFinal'].max() - df['ToaFinal'].min():.6f} seconds\")\n",
-    "print(f\"\\nPixel ranges: x({df['xPixel'].min()}-{df['xPixel'].max()}), y({df['yPixel'].min()}-{df['yPixel'].max()})\")\n",
-    "print(f\"\\nFirst few rows:\")\n",
-    "print(df.head(10))"
+    "reader.get_summary_stats(df, head=10)"
    ]
   },
   {
