Changed to rows instead of head

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Display basic information about the loaded data\n",
-    "reader.get_summary_stats(df, head=10)"
+    "reader.get_summary_stats(df, rows=10)"
    ]
   },
   {
