--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -43,10 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1e85e4cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Display basic information about the loaded data\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m reader.get_summary_stats(\u001b[43mdf\u001b[49m, rows=\u001b[32m10\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Display basic information about the loaded data\n",
     "reader.get_summary_stats(df, rows=10)"
