Add time adjustments when reading files to offset ToA times.

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -24,18 +24,24 @@
     "# --- User inputs ---\n",
     "rawsignal_dir = \"PATH/TO/YOUR/RAWSIGNALS/DATA\"  # Directory containing raw signal files\n",
     "\n",
-    "#===== EXAMPLE USAGE CASES OF READER TO LOAD .RAWSIGNAL DATA =====#\n",
+    "#===== EXAMPLE USAGE CASES OF READER =====#\n",
     "\n",
     "reader = SignalDataReader()\n",
     "\n",
-    "# # Load all files in the rawsignals folder into a pandas dataframe\n",
+    "# Load all files in the rawsignals folder into a pandas dataframe\n",
     "# df = reader.read_rawsignals_folder(rawsignal_dir)\n",
     "\n",
-    "# Load specific indices 5 through 50\n",
+    "# # Load specific indices 5 through 50\n",
     "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50\")\n",
     "\n",
     "# # Load specific indices 5 through 50 with a step of 2. \n",
     "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50:2\")\n",
+    "\n",
+    "# # Load specific indices 10 through 100 with automatic time adjustment\n",
+    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"10:100\", time_adjust=True)\n",
+    "\n",
+    "# # Load specific indices 10 through 100 with time adjustment with manual period of 5 seconds\n",
+    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"10:100\", time_adjust=True, file_duration=5)\n",
     "\n",
     "# # Load a single file directly (instead of using folder):\n",
     "# df = reader.read_rawsignals_file(\"/path/to/data/file1.rawSignals\")\n"
@@ -43,25 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1e85e4cb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Display basic information about the loaded data\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m reader.get_summary_stats(\u001b[43mdf\u001b[49m, rows=\u001b[32m10\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Filter out all data that isn't a pixel hit\n",
+    "pixel_df = reader.filter_by_signal_type(df, \"Pixel\")\n",
+    "\n",
     "# Display basic information about the loaded data\n",
-    "reader.get_summary_stats(df, rows=10)"
+    "reader.get_summary_stats(pixel_df, rows=10)"
    ]
   },
   {
