Changing time_adjust in reader and example file

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "reader = SignalDataReader()\n",
     "\n",
-    "# Load all files in the rawsignals folder into a pandas dataframe\n",
+    "# # Load all files in the rawsignals folder into a pandas dataframe\n",
     "# df = reader.read_rawsignals_folder(rawsignal_dir)\n",
     "\n",
     "# # Load specific indices 5 through 50\n",
@@ -37,8 +37,8 @@
     "# # Load specific indices 5 through 50 with a step of 2. \n",
     "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50:2\")\n",
     "\n",
-    "# # Load specific indices 10 through 100 with automatic time adjustment\n",
-    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"10:100\", time_adjust=True)\n",
+    "# # Load specific indices 10 through 100 with automatic time adjustment and rounding every 0.5s\n",
+    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"10:100\", time_adjust=True, round_duration_to=0.5)\n",
     "\n",
     "# # Load specific indices 10 through 100 with time adjustment with manual period of 5 seconds\n",
     "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"10:100\", time_adjust=True, file_duration=5)\n",
@@ -63,15 +63,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ce8b1ea8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pixel_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m plt.figure(figsize=(\u001b[32m12\u001b[39m, \u001b[32m10\u001b[39m))\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Create 2D histogram with color representing count density\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m hist, xedges, yedges = np.histogram2d(\u001b[43mpixel_df\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mxPixel\u001b[39m\u001b[33m'\u001b[39m], pixel_df[\u001b[33m'\u001b[39m\u001b[33myPixel\u001b[39m\u001b[33m'\u001b[39m], bins=\u001b[32m256\u001b[39m, \u001b[38;5;28mrange\u001b[39m=[[\u001b[32m0\u001b[39m, \u001b[32m255\u001b[39m], [\u001b[32m0\u001b[39m, \u001b[32m255\u001b[39m]])\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Display as image\u001b[39;00m\n\u001b[32m     10\u001b[39m plt.imshow(hist.T, origin=\u001b[33m'\u001b[39m\u001b[33mlower\u001b[39m\u001b[33m'\u001b[39m, extent=[\u001b[32m0\u001b[39m, \u001b[32m255\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m255\u001b[39m], cmap=\u001b[33m'\u001b[39m\u001b[33mviridis\u001b[39m\u001b[33m'\u001b[39m, aspect=\u001b[33m'\u001b[39m\u001b[33mequal\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'pixel_df' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1200x1000 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "'''Histogram to view pixel hits before any processing'''\n",
-    "\n",
-    "# Filter only 'Pixel' signal type data\n",
-    "pixel_df = df[df['signalTypeDescription'] == 'Pixel']\n",
     "\n",
     "# Create a 2D histogram (image) of the pixel data\n",
     "plt.figure(figsize=(12, 10))\n",
