Example file updates to current loader.py implementation.

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hermes.analysis.reader import SignalDataReader\n",
+    "from hermes.analysis.loader import SignalsIO\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,29 +22,33 @@
    "outputs": [],
    "source": [
     "# --- User inputs ---\n",
-    "rawsignal_dir = \"PATH/TO/YOUR/RAWSIGNALS/DATA\"  # Directory containing raw signal files\n",
+    "rawSignals_dir = \"PATH/TO/YOUR/RAWSIGNALS/DATA\"              # Directory containing .rawSignals files\n",
+    "csv_dir = \"PATH/TO/YOUR/CSV/DATA\"                           # Directory containing .csv files\n",
+    "pixelActivations_dir = \"PATH/TO/YOUR/PIXELACTIVATIONS/DATA\" # Directory containing .pixelActivations files\n",
     "\n",
-    "#===== EXAMPLE USAGE CASES OF READER =====#\n",
+    "#===== EXAMPLE USAGE CASES OF LOADER =====#\n",
     "\n",
-    "reader = SignalDataReader()\n",
+    "loader = SignalsIO()\n",
     "\n",
-    "# # Load all files in the rawsignals folder into a pandas dataframe\n",
-    "# df = reader.read_rawsignals_folder(rawsignal_dir)\n",
+    "# # Load a single .rawSignals, .csv, and .pixelActivations file\n",
+    "# df1 = loader.load_data(\"path/to/data.rawSignals\")\n",
+    "# df2 = loader.load_data(\"path/to/data.csv\")\n",
+    "# df3 = loader.load_data(\"path/to/data.pixelActivations\")\n",
     "\n",
-    "# # Load specific indices 5 through 50\n",
-    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50\")\n",
+    "# # Load the .rawSignals files from a folder that has many different file types. \n",
+    "# df = loader.load_data(\"path/to/mixed/data\", format=\"rawSignals\")\n",
     "\n",
-    "# # Load specific indices 5 through 50 with a step of 2. \n",
-    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"5:50:2\")\n",
+    "# # Load the .csv files from a folder that with many file types and only load files 5 through 9.\n",
+    "# df = loader.load_data(\"path/to/mixed/data\", format=\"csv\", index=\"5:10\")\n",
     "\n",
-    "# # Load specific indices 10 through 100 with automatic time adjustment and rounding every 0.5s\n",
-    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"10:100\", time_adjust=True, round_duration_to=0.5)\n",
+    "# # Load the .pixelActivations files from directory, load files 10 through 19 with a step of 2, and enable ToA continuity\n",
+    "# df = loader.load_data(pixelActivations_dir, index=\"10:20:2\", time_adjust=True)\n",
     "\n",
-    "# # Load specific indices 10 through 100 with time adjustment with manual period of 5 seconds\n",
-    "# df = reader.read_rawsignals_folder(rawsignal_dir, index_range=\"10:100\", time_adjust=True, file_duration=5)\n",
+    "# # Load .rawSignals files form directory, files 10 through 100 with step of 5, enable ToA continuity, with rounding estimation.\n",
+    "# df = loader.load_data(rawSignals_dir, index=\"10:101:5\", time_adjust=True, round_period_to=0.25)\n",
     "\n",
-    "# # Load a single file directly (instead of using folder):\n",
-    "# df = reader.read_rawsignals_file(\"/path/to/data/file1.rawSignals\")\n"
+    "# # Load .rawSignals files form directory, files 10 through 100 with step of 5, enable ToA continuity, with defined file duration.\n",
+    "# df = loader.load_data(rawSignals_dir, index=\"10:101:5\", time_adjust=True, file_duration=2.5)\n"
    ]
   },
   {
