--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -39,16 +39,16 @@
     "# # Load the .rawSignals files from a folder that has many different file types. \n",
     "# df = loader.load_data(\"path/to/mixed/data\", format=\"rawSignals\")\n",
     "\n",
-    "# # Load the .csv files from a folder that with many file types and only load files 5 through 9.\n",
+    "# # Load the .csv files from a folder with many file types and only load files 5 through 9.\n",
     "# df = loader.load_data(\"path/to/mixed/data\", format=\"csv\", index=\"5:10\")\n",
     "\n",
     "# # Load the .pixelActivations files from directory, load files 10 through 19 with a step of 2, and enable ToA continuity\n",
     "# df = loader.load_data(pixelActivations_dir, index=\"10:20:2\", time_adjust=True)\n",
     "\n",
-    "# # Load .rawSignals files form directory, files 10 through 100 with step of 5, enable ToA continuity, with rounding estimation.\n",
+    "# # Load .rawSignals files from directory, load files 10 through 100 with step of 5, enable ToA continuity, with rounding estimation.\n",
     "# df = loader.load_data(rawSignals_dir, index=\"10:101:5\", time_adjust=True, round_period_to=0.25)\n",
     "\n",
-    "# # Load .rawSignals files form directory, files 10 through 100 with step of 5, enable ToA continuity, with defined file duration.\n",
+    "# # Load .rawSignals files from directory, load files 10 through 100 with step of 5, enable ToA continuity, with defined file duration.\n",
     "# df = loader.load_data(rawSignals_dir, index=\"10:101:5\", time_adjust=True, file_duration=2.5)\n",
     "\n",
     "#===== EXAMPLE USAGE CASES OF ANALYZER =====#\n",
