Updating example file to contain a plotter example

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "from hermes.analysis.loader import SignalsIO\n",
+    "from hermes.analysis.plotter import BufferPlotter, HistogramPlotter, ToAImageSequenceGenerator\n",
     "from hermes.analysis.analyzer import SignalAnalyzer\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -63,7 +64,11 @@
     "\n",
     "# # Filter DataFrame to be between time window of 1.5 and 2 seconds.\n",
     "# time_df = analyzer.filter_by_time_range(df, 1.5, 2.0)\n",
-    "\n"
+    "\n",
+    "#===== EXAMPLE USAGE CASES OF PLOTTER =====#\n",
+    "\n",
+    "# # Plot a heatmap of pixel hits. Assumed pixel_df is defined from analyzer section.\n",
+    "# HistogramPlotter.plot_2D_histogram(pixel_df)\n"
    ]
   }
  ],
