Adjusting how config files work in examples.

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -70,11 +70,43 @@
     "# # Plot a heatmap of pixel hits. Assumed pixel_df is defined from analyzer section.\n",
     "# HistogramPlotter.plot_2D_histogram(pixel_df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94016c38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage of HERMES config tools\n",
+    "import hermes\n",
+    "import json\n",
+    "\n",
+    "# Load and validate a run config from an INI file\n",
+    "run_config_json = hermes.load_run_config_file(\"/path/to/your/acquireTpx3.ini\")\n",
+    "run_config = json.loads(run_config_json)  # Now a Python dict\n",
+    "\n",
+    "# Optionally, apply overrides\n",
+    "overrides = {\n",
+    "    \"RunSettings\": {\"run_name\": \"example_run\", \"number_of_runs\": 5}\n",
+    "}\n",
+    "hermes.apply_overrides(run_config, overrides)\n",
+    "\n",
+    "# Validate again after overrides (will print confirmation if valid)\n",
+    "hermes.validate_config(run_config)\n",
+    "\n",
+    "# Load and validate a server config from an INI file\n",
+    "server_config_json = hermes.load_server_config_file(\"/path/to/your/acquireTpx3.ini\")\n",
+    "server_config = json.loads(server_config_json)\n",
+    "\n",
+    "# Validate server config (will print confirmation if valid)\n",
+    "hermes.validate_config(server_config)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
