Adjusting example file to actually work when someone tries it for the first time (we hope).

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -76,31 +76,39 @@
    "execution_count": null,
    "id": "94016c38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Must run at least once",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Load and validate a run config from an INI file\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m run_config_json = \u001b[43mhermes\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_run_config_file\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m/path/to/your/acquireTpx3.ini\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m run_config = json.loads(run_config_json)  \u001b[38;5;66;03m# Now a Python dict\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Optionally, apply overrides\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Programs/HERMES/src/hermes/acquisition/acquire.py:59\u001b[39m, in \u001b[36mload_run_config_file\u001b[39m\u001b[34m(config_file, run_name)\u001b[39m\n\u001b[32m     29\u001b[39m run_config = {\n\u001b[32m     30\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mWorkingDir\u001b[39m\u001b[33m'\u001b[39m: {\n\u001b[32m     31\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mpath_to_working_dir\u001b[39m\u001b[33m'\u001b[39m: config.get(\u001b[33m'\u001b[39m\u001b[33mWorkingDir\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mpath_to_working_dir\u001b[39m\u001b[33m'\u001b[39m, fallback=\u001b[33m\"\u001b[39m\u001b[33m./\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m   (...)\u001b[39m\u001b[32m     56\u001b[39m     }\n\u001b[32m     57\u001b[39m }\n\u001b[32m     58\u001b[39m \u001b[38;5;66;03m# Validate after loading\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m59\u001b[39m \u001b[43mvalidate_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrun_config\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     60\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m json.dumps(run_config, indent=\u001b[32m4\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Programs/HERMES/src/hermes/acquisition/acquire.py:107\u001b[39m, in \u001b[36mvalidate_config\u001b[39m\u001b[34m(cfg)\u001b[39m\n\u001b[32m    105\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mExposure time must be <= trigger period\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    106\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m runs < \u001b[32m1\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m107\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mMust run at least once\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    109\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mRun config validation passed: configuration is valid.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    110\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mServerConfig\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m cfg:\n",
+      "\u001b[31mValueError\u001b[39m: Must run at least once"
+     ]
+    }
+   ],
    "source": [
     "# Example usage of HERMES config tools\n",
     "import hermes\n",
     "import json\n",
     "\n",
     "# Load and validate a run config from an INI file\n",
-    "run_config_json = hermes.load_run_config_file(\"/path/to/your/acquireTpx3.ini\")\n",
+    "run_config_json = hermes.load_run_config_file(\"run_config.ini\")\n",
     "run_config = json.loads(run_config_json)  # Now a Python dict\n",
     "\n",
-    "# Optionally, apply overrides\n",
+    "# Optionally, apply overrides via function\n",
     "overrides = {\n",
     "    \"RunSettings\": {\"run_name\": \"example_run\", \"number_of_runs\": 5}\n",
     "}\n",
     "hermes.apply_overrides(run_config, overrides)\n",
     "\n",
-    "# Validate again after overrides (will print confirmation if valid)\n",
-    "hermes.validate_config(run_config)\n",
-    "\n",
     "# Load and validate a server config from an INI file\n",
-    "server_config_json = hermes.load_server_config_file(\"/path/to/your/acquireTpx3.ini\")\n",
-    "server_config = json.loads(server_config_json)\n",
-    "\n",
-    "# Validate server config (will print confirmation if valid)\n",
-    "hermes.validate_config(server_config)"
+    "server_config_json = hermes.load_server_config_file(\"server_config.ini\")\n",
+    "server_config = json.loads(server_config_json)"
    ]
   }
  ],
