Adding current config setup to example notebook (more for our reference than for a users)

--- a/examples/notebooks/analysis_hermes.ipynb
+++ b/examples/notebooks/analysis_hermes.ipynb
@@ -19,6 +19,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2d55ecd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This specific cell is up to date at of 9/13/2025 at 2:00 PM MST. Everything else in this file is not up to date.\n",
+    "\n",
+    "from hermes.acquisition.configure import ConfigurationManager  # adjust class name if needed\n",
+    "import hermes.acquisition.setup as setup\n",
+    "\n",
+    "working_dir = \"PATH/TO/YOUR/WORKING/DIR\"\n",
+    "\n",
+    "setup.initial_setup(working_dir)\n",
+    "\n",
+    "configurator = ConfigurationManager()\n",
+    "\n",
+    "configurator.setup_environment(path_to_working_dir=working_dir, run_dir_name=\"test1\")\n",
+    "configurator.validate_config()\n",
+    "configurator.save_config_file(\"test1_config.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6950e206",
    "metadata": {},
    "outputs": [],
